--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -343,17 +343,17 @@ en:
         amount_paid_cents: Amount paid cents
         first_invoice: :activerecord.models.first_invoice
         force_active: Force active
-        invoice_paid_features: Invoice paid features
+        invoice_organization_features: Invoice paid features
         is_active: Is active
         notes: Notes
         organization: :activerecord.models.organization
-        paid_features: Paid features
+        organization_features: Paid features
         payments: Payments
         subscription_end_at: Subscription end at
         subscription_start_at: Subscription start at
-      invoice_paid_feature:
+      invoice_organization_feature:
         invoice: :activerecord.models.invoice
-        paid_feature: :activerecord.models.paid_feature
+        organization_feature: :activerecord.models.organization_feature
       listicle:
         blog: :activerecord.models.blog
         body: Body
@@ -488,12 +488,12 @@ en:
         send_email: Send email
         user: :activerecord.models.user
         user_hidden: User hidden
-      paid_feature:
+      organization_feature:
         amount_cents: Amount cents
         description: Description
         details_link: Details link
         feature_slugs: Feature slugs
-        invoice_paid_features: Invoice paid features
+        invoice_organization_features: Invoice paid features
         invoices: Invoices
         kind: Kind
         name: Name
@@ -804,7 +804,7 @@ en:
       front_gear_type: Front gear type
       integration: Integration
       invoice: Invoice
-      invoice_paid_feature: Invoice paid feature
+      invoice_organization_feature: Invoice paid feature
       listicle: Listicle
       location: Location
       lock: Lock
@@ -817,7 +817,7 @@ en:
       organization_message: Organization message
       other_listing: Other listing
       ownership: Ownership
-      paid_feature: Paid feature
+      organization_feature: Paid feature
       paint: Paint
       payment: Payment
       public_image: Public image
