--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -1788,6 +1788,8 @@ nl:
       zipcode: Postcode
       choose_country: Kies land
       city: City
+      state: Staat
+      street: Straat
     edit_drivetrain:
       all_diameters: Alle diameters
       belt_drive: Riemaandrijving
@@ -2088,7 +2090,6 @@ nl:
       link_bike_sticker_kind: Link %{bike_sticker_kind}
     show:
       at: bij
-      bike_in_admin: "%{bike_type} in Admin"
       bike_photo: "%{bike_type} foto"
       color_may_not_match: Kleur komt mogelijk niet overeen!
       componentcmodel_name: "%{componentcmodel_name}"
@@ -4448,8 +4449,6 @@ nl:
         mfg_model_color_html: fabrikant, model, <span class="less-strong">kleur</span>
         model: Model
         only_no_sticker_html: Alleen <strong>geen</strong> sticker
-        only_not: alleen niet
-        only_with: alleen met
         only_with_stickers_html: Alleen <strong>met</strong> stickers
         owner_name: Eigenaar naam
         registered: Geregistreerd
@@ -4469,6 +4468,10 @@ nl:
         visible_columns: Zichtbare kolommen
         email_hidden: email verborgen
         impounded: In beslag genomen bij
+        address: 'Adres:'
+        avery: Avery?
+        only_no_address_html: Alleen <strong>geen</strong> adres
+        only_with_address_html: Alleen <strong>met</strong> adres
     bulk_imports:
       index:
         added: Toegevoegd
