--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -4688,6 +4688,7 @@ nl:
         internal_notes: Interne notities
         message: Bericht
         notification_number: Kennisgeving#
+        resolved: Vastbesloten
     manages:
       location_fields:
         address: Adres
