--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1827,19 +1827,19 @@ en:
         password: Password
         sharing: Sharing + Personal Page
         user_settings: User Settings
-      send_password_reset_email:
-        email_not_found: Sorry, that email address isn't in our system.
-        reset_just_sent_wait_a_sec: Another password reset email was just sent to that email, please wait a minute before trying again.
-      update_password_with_reset_token:
-        password_reset_successfully: Password reset successfully. You've been signed in to Bike Index.
       find_user_from_password_reset_token!:
         does_not_match_token: Doesn't match user's password reset token
         token_expired: Password reset token expired, try resetting password again.
-      reset_password_token_update_form:
-        link_no_longer_valid: We're sorry, but that link is no longer valid.
       resend_confirmation_email:
         please_sign_in: Unable to find a user matching that email!
         resending_email: Email confirmation re-sent
+      reset_password_token_update_form:
+        link_no_longer_valid: We're sorry, but that link is no longer valid.
+      send_password_reset_email:
+        email_not_found: Sorry, that email address isn't in our system.
+        reset_just_sent_wait_a_sec: >-
+          Another password reset email was just sent to that email, please wait a
+          minute before trying again.
       show:
         user_not_sharing: Sorry, that user isn't sharing their bikes.
       unsubscribe:
@@ -1856,6 +1856,9 @@ en:
         thanks_for_accepting_tos: Thanks for accepting the terms of service!
         you_can_use_bike_index: Thanks! Now you can use Bike Index.
         you_can_use_bike_index_as_org: Thanks! Now you can use Bike Index as %{org_name}
+      update_password_with_reset_token:
+        password_reset_successfully: Password reset successfully. You've been signed
+          in to Bike Index.
     welcome:
       recovery_stories:
         no_stories_to_display: No recovery stories to display
@@ -5348,11 +5351,6 @@ en:
       sign_up_using_globalid: Sign up using globaliD
       sign_up_using_strava: Sign up using Strava
       terms_and_conditions: terms and conditions
-    send_password_reset_email:
-      follow_the_link_back: Follow the link back to the site to reset your password!
-      password_reset: Password Reset
-      weve_sent_an_email: We've sent an email to the address you have on file with
-        us.
     please_confirm_email:
       did_not_get_an_email: >-
         Didn't get an email? Check your spam folder. If you can't find it, resend
@@ -5373,6 +5371,11 @@ en:
         a link to reset your password.
       reset_your_password: Reset your Password
       your_email_address: your email address
+    send_password_reset_email:
+      follow_the_link_back: Follow the link back to the site to reset your password!
+      password_reset: Password Reset
+      weve_sent_an_email: We've sent an email to the address you have on file with
+        us.
     show:
       abandoned: Abandoned
       bikes: Bikes
