--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2638,7 +2638,7 @@ en:
         - email %{link} if you're having trouble.
       in_this_picture_html: >-
         In this picture <em>200910427-2A</em> is a manufacturer number and not a serial
-        number. However, to make bikes as easy as possible to find, Feel free to enter
+        number. However, to make bikes as easy as possible to find, feel free to enter
         all numbers you encounter.
       jump_back_to_footnote: Jump back to footnote %{num} in the text.
       look_serial: Look serial number
