file cleaned bulk import display

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4421,6 +4421,7 @@ en:
         creator: Creator
         errors: Errors
         file: File
+        file_removed: file removed
         manufacturer: Manufacturer
         model: Model
         progress: Progress
