--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2135,7 +2135,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2161,7 +2161,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -4422,6 +4422,8 @@ en:
         errors: Errors
         file: File
         file_removed: file removed
+        file_removed_explanation: after a few days, we delete the uploaded file to
+          save space
         manufacturer: Manufacturer
         model: Model
         progress: Progress
